# cursedtodo

./: Dockerfile  README.md  config.ini  config.toml  de.cast  demo.sh  pyproject.toml
.github/workflows/: demo.yml  pull_request.yml  release.yml
cals/personal/: b626bc76-b634-11ef-acbd-70d8239c8ab0.ics
cursedtodo/: __main__.py  data.py  todo.py
cursedtodo/models/: todo.py  todolist.py
cursedtodo/presenters/todo/: editTodoPresenter.py
cursedtodo/ui/: screen.py  todoitem.py  todolist.py
cursedtodo/utils/: config.py
cursedtodo/views/: todolist.py
cursedtodo/views/todo/: confirm.py
cursedtodo/views/todo/field/: selectField.py  textField.py
src/cursedtodo/: __main__.py  cursedtodo.py  main.py
src/cursedtodo.new/: cursedtodo.py  main.py  screens.py  test.py
src/cursedtodo.new/db/: db.py
src/cursedtodo.new/presenters/: showTodoPresenter.py  todolist.py
src/cursedtodo.new/utils/: config.py
src/cursedtodo.new/views/: base_view.py  main_view.py  show_todo_view.py  showtodo.py  todolist.py
src/cursedtodo.old/: cursedtodo.py  sandbox.py  test.py  test2.py
src/cursedtodo.old/presenters/: todolist.py
src/cursedtodo.old/utils/: formater.py
src/cursedtodo.old/views/: todolist.py
src/cursedtodo.old/views/todo/field/: field.py
src/cursedtodo/config/: config.py  default_config.toml
src/cursedtodo/controlers/: base_controller.py  create_todo_controller.py  edit_todo_controller.py  main_controller.py
src/cursedtodo/models/: calendar.py  todo.py  todo_repository.py  todolist.py
src/cursedtodo/utils/: colors.py  editor.py  formater.py  help.py  router.py  textpad.py  time.py  window_utils.py
src/cursedtodo/views/: create_todo_view.py  dialog.py  edit_todo_view.py  info_popup.py  main_view.py  todolist.py  view_todo_view.py
src/cursedtodo/views/form/: Button.py  Field.py  categories_field.py  datetime_field.py  priority_field.py  select_field.py  text_field.py  textarea_field.py  textinput_field.py
src/cursedtodo/views/todo/: confirm.py  edit.py
src/cursedtodo/views/todo/field/: selectField.py  textField.py
