[project]
name = "cursedtodo"
version = "0.0.1a"
description = "Default template for PDM package"
authors = [{ name = "François Lachèse", email = "francois.lachese@gmail.com" }]
dependencies = ["ics>=0.7.2"]

[dependency-groups]
dev = ["mypy>=1.11.2"]

requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
ctodo = "cursedtodo.cursedtodo:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
editable-backend = "path"

[tool.mypy]
mypy_path = "src/"
strict = true
# show_error_codes = true
# warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "ics.*"
ignore_missing_imports = true
