[project]
name = "cursedtodo"
description = "Cursedtodo is a TUI todo manager written in Python using (n)curses library"
authors = [
    {name = "François Lachèse", email = "francois.lachese@gmail.com"},
]
dependencies = ["ics>=0.7.2"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
ctodo = "cursedtodo.cursedtodo:main"

[tool.pdm]
package-dir = "src"
distribution = true

[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
debug = "python -m debugpy --listen 127.0.0.1:5678 --wait-for-client -m cursedtodo.cursedtodo"

[tool.mypy]
mypy_path = "src/"
strict = true

[[tool.mypy.overrides]]
module = "ics.*"
ignore_missing_imports = true
